--- a/_posts/2017-12-05-Mapping.md
+++ b/_posts/2017-12-05-Mapping.md
@@ -1,6 +1,9 @@
 ---
 published: false
 ---
-## A New Post
+## Digital Places, Digital Spaces
 
-Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
+**Map,_n.1_**
+
+"A drawing or other representation of the earth's surface or a part of it made on a flat surface, showing the distribution of physical or geographical features (and often also including socio-economic, political, agricultural, meteorological, etc., information), with each point in the representation corresponding to an actual geographical position according to a fixed scale or projection; a similar representation of the positions of stars in the sky, the surface of a planet, or the like. Also: a plan of the form or layout of something, as a route, a building, etc."
+
