--- a/_posts/2017-12-05-Mapping.md
+++ b/_posts/2017-12-05-Mapping.md
@@ -7,3 +7,9 @@ published: false
 
 "A drawing or other representation of the earth's surface or a part of it made on a flat surface, showing the distribution of physical or geographical features (and often also including socio-economic, political, agricultural, meteorological, etc., information), with each point in the representation corresponding to an actual geographical position according to a fixed scale or projection; a similar representation of the positions of stars in the sky, the surface of a planet, or the like. Also: a plan of the form or layout of something, as a route, a building, etc."
 
+**What is Mapping?**
+Mapping is most often associated with the physical representation of geographic spaces through images. In this form, maps can take on a high degree of complexity moving beyond intricate detailing of spaces to constructing a more detailed perspective on how the environment is formed. As such, we see the formation of maps with indicators of distance, depth, water levels, and even important cultural spaces. Maps are thus an important manner in which we can determine our space in the world. Yet maps too carry ideology with them - there are contested spaces which are often not depicted. As such, the map that is commonly accepted shows who is considered to be 
+
+Tools
+
+Links
