--- a/_posts/2017-12-05-Mapping.md
+++ b/_posts/2017-12-05-Mapping.md
@@ -8,8 +8,13 @@ published: false
 "A drawing or other representation of the earth's surface or a part of it made on a flat surface, showing the distribution of physical or geographical features (and often also including socio-economic, political, agricultural, meteorological, etc., information), with each point in the representation corresponding to an actual geographical position according to a fixed scale or projection; a similar representation of the positions of stars in the sky, the surface of a planet, or the like. Also: a plan of the form or layout of something, as a route, a building, etc."
 
 **What is Mapping?**
-Mapping is most often associated with the physical representation of geographic spaces through images. In this form, maps can take on a high degree of complexity moving beyond intricate detailing of spaces to constructing a more detailed perspective on how the environment is formed. As such, we see the formation of maps with indicators of distance, depth, water levels, and even important cultural spaces. Maps are thus an important manner in which we can determine our space in the world. Yet maps too carry ideology with them - there are contested spaces which are often not depicted. As such, the map that is commonly accepted shows who is considered to be 
+Mapping is most often associated with the physical representation of geographic spaces through images. In this form, maps can take on a high degree of complexity moving beyond intricate detailing of spaces to constructing a more detailed perspective on how the environment is formed. As such, we see the formation of maps with indicators of distance, depth, water levels, and even important cultural spaces - more recently we have even seen innovations of enhanced reality mapping images, sound, and scent onto geographic locations. Maps are thus an important manner in which we can determine our space in the world. Yet maps too carry ideology with them - there are contested spaces which are often not depicted. As such, the map that is commonly accepted shows what is considered to be correct. The world map too carries with it inherent beliefs about the world - in Canada we are at the top because that is the way the world is seen from our perspective. Often too the sizes of places are technically incorrect, with Africa, China and India distorted in favour of wealthier Northern spaces. But even with these problems, maps are often the best way to visualize space.
+
+But maps cover more than geography...
+
+Maps can be be highjacked for other purposes beyond a visual representation of real places. On a more simple level, maps can create visualizations of fictional spaces or even possible futures. This can help us determine better paths to move onto from the present. Imaging potential spaces allows for us to view a possible world that may better our own. Furthermore, because the map is in common use and the majority of people have some kind of cartographic literacy it is commonly used to display non-geographic data. 
 
 Tools
 
+-[Neatline](http://neatline.org/): Neatline allows scholars, students, and curators to tell stories with maps and timelines.
 Links
