--- a/_posts/2017-12-05-Mapping.md
+++ b/_posts/2017-12-05-Mapping.md
@@ -11,11 +11,13 @@ published: false
 
 Mapping is most often associated with the physical representation of geographic spaces through images. In this form, maps can take on a high degree of complexity moving beyond intricate detailing of spaces to constructing a more detailed perspective on how the environment is formed. As such, we see the formation of maps with indicators of distance, depth, water levels, and even important cultural spaces - more recently we have even seen innovations of enhanced reality mapping images, sound, and scent onto geographic locations. Maps are thus an important manner in which we can determine our space in the world. Yet maps too carry ideology with them - there are contested spaces which are often not depicted. As such, the map that is commonly accepted shows what is considered to be correct. The world map too carries with it inherent beliefs about the world - in Canada we are at the top because that is the way the world is seen from our perspective. Often too the sizes of places are technically incorrect, with Africa, China and India distorted in favour of wealthier Northern spaces. But even with these problems, maps are often the best way to visualize space.
 
-But maps cover more than geography...
+_But maps cover more than geography..._
 
 Maps can be be highjacked for other purposes beyond a visual representation of real places. On a more simple level, maps can create visualizations of fictional spaces or even possible futures. This can help us determine better paths to move onto from the present. Imaging potential spaces allows for us to view a possible world that may better our own. Furthermore, because the map is in common use and the majority of people have some kind of cartographic literacy it is commonly used to display non-geographic data. 
 
-**Tools**
+With new advancements in digital tools the way that we do mapping has shifted. As a result, maps are becoming more interactive and thus can gain complexity in their level of detail and use. 
+
+**Tools:**
 
 -[Neatline](http://neatline.org/): Neatline allows scholars, students, and curators to tell stories with maps and timelines.
 Links
@@ -24,3 +26,18 @@ Links
 -[Storymap](https://storymap.knightlab.com/): StoryMapJS is a free tool to help you tell stories on the web that highlight the locations of a series of events.
 -[Palladio](http://hdlab.stanford.edu/palladio/): Visualize complex historical data with ease.
 
+
+**Links:**
+
+-[Blades, Rob. ‘Pembroke Soundscapes’](http://pembrokesoundscapes.ca/) 
+-[Digital Atlas of Egyptian Archaeology](https://github.com/msu-anthropology/daea)
+-[Drucker, J. “Humanities approaches to graphical display” DHQ 2011.5](http://www.digitalhumanities.org/dhq/vol/5/1/000091/000091.html)
+-[Eve, S. 2012. Augmenting Phenomenology: Using Augmented Reality to Aid Archaeological Phenomenology in the Landscape. Journal of Archaeological Method and Theory 19.4 (2012) pp. 582-600 DOI: 10.1007/s10816-012-9142-7](https://link.springer.com/article/10.1007/s10816-012-9142-7)
+-[Eve, S. 2017 ‘The Embodied GIS. Using Mixed Reality to explore multi-sensory archaeological landscapes, Internet Archaeology 44.](https://doi.org/10.11141/ia.44.3)
+-[Gibbs, Fred. ‘Digital Mapping and Geospatial Humanities’.](http://fredgibbs.net/courses/digital-mapping/)
+-[Guldi, J. “The Spatial Turn”](http://spatial.scholarslab.org/spatial-turn/)
+-[Nowviskie, Bethany 2010. ‘Inventing the Map’ in the Digital Humanities: a Young Lady’s Primer. Poetess Archive Journal 2.1 (2010)](https://journals.tdl.org/paj/index.php/paj/article/view/11)
+-[Scheidel, Walter. 2014.‘The shape of the Roman world: modelling imperial connectivity’, Journal of Roman Archaeology 27 2014), 7-32](http://orbis.stanford.edu/)
+-[Sinton, Diana ‘Mapping’ Digital Pedagogy in the Humanities](https://digitalpedagogy.mla.hcommons.org/keywords/mapping/)
+
+See my annotations [here](https://hypothes.is/users/kirstenbussiere).
