--- a/_posts/2017-12-05-Mapping.md
+++ b/_posts/2017-12-05-Mapping.md
@@ -1,5 +1,8 @@
 ---
-published: false
+published: true
+layout: post
+author: Kirsten Bussière
+title: Mapping - A Reflection
 ---
 ## Digital Places, Digital Spaces
 
