--- a/_posts/2018-01-05-Crowds.md
+++ b/_posts/2018-01-05-Crowds.md
@@ -4,7 +4,12 @@ published: false
 ## One Amongst Many 
 
 **"Crowd":, _n_.3**
+
 "A large number of persons gathered so closely together as to press upon or impede each other; a throng, a dense multitude."
+
+**We are a Community**
+
+Studying the concept of communities has long been approached in academic fields as one that is inherently difficult. On the one hand, looking at communities from a purely unbiased scholarly perspective removes the emotional connection individuals have to certain groups - but on the other hand, emotional responses are inherently biased.  
 
 **The Crowd in Digital Humanities:**
 
