--- a/_posts/2018-01-05-Crowds.md
+++ b/_posts/2018-01-05-Crowds.md
@@ -9,7 +9,9 @@ published: false
 
 **We are a Community**
 
-Studying the concept of communities has long been approached in academic fields as one that is inherently difficult. On the one hand, looking at communities from a purely unbiased scholarly perspective removes the emotional connection individuals have to certain groups - but on the other hand, emotional responses are inherently biased.  
+Studying the concept of communities has long been approached in academic fields as one that is inherently difficult. On the one hand, looking at communities from a purely unbiased scholarly perspective removes the emotional connection individuals have to certain groups - but on the other hand, emotional responses are inherently biased. The truth is, we cannot remove ourselves from the community because we are a part of it, so critically we have to look from an inside out. 
+
+The digital world has further complicated this idea of community - moving it beyond physical spaces into the online world. As a result, people are part of a community based in geographies related to where they live, go to school, and work but they are also able to connect with people across the globe
 
 **The Crowd in Digital Humanities:**
 
