--- a/_posts/2018-01-05-Crowds.md
+++ b/_posts/2018-01-05-Crowds.md
@@ -11,9 +11,17 @@ published: false
 
 Studying the concept of communities has long been approached in academic fields as one that is inherently difficult. On the one hand, looking at communities from a purely unbiased scholarly perspective removes the emotional connection individuals have to certain groups - but on the other hand, emotional responses are inherently biased. The truth is, we cannot remove ourselves from the community because we are a part of it, so critically we have to look from an inside out. 
 
-The digital world has further complicated this idea of community - moving it beyond physical spaces into the online world. As a result, people are part of a community based in geographies related to where they live, go to school, and work but they are also able to connect with people across the globe
+The digital world has further complicated this idea of community - moving it beyond physical spaces into the online world. As a result, people are part of a community based in geographies related to where they live, go to school, and work but they are also able to connect with people across the globe who share similar values and interests. The digital world thus allows for the enhancement of physical communities through online sectors, but also creates the possibility for the creation of new communities that do not have physical ties. 
 
 **The Crowd in Digital Humanities:**
 
+**Links**
+Draxler, Bridget and Jon Winet. ‘Community’ Digital Pedagogy in the Humanities https://digitalpedagogy.mla.hcommons.org/keywords/community/
 
+Roy Rosenzweig, “Can History be Open Source? Wikipedia and the Future of the Past”, http://chnm.gmu.edu/essays-on-history-new-media/essays/?essayid=42
 
+Tebor Scholz, ‘Crowdmilking’ 2014 https://web.archive.org/web/20141028184927/http://collectivate.net/journalisms/2014/3/9/crowdmilking.html Tim Causer and Valerie Wallace. 2012. “Building a volunteer community: results and findings from Transcribe Bentham,” DHQ 6.2 . http://discovery.ucl.ac.uk/1362050
+
+Avi Santo and Christopher Lucas, 2009. ‘Engaging Academic and Nonacademic Communities through Online Scholarly Work.” http://www.jstor.org.proxy.library.carleton.ca/stable/20484454
+
+Any piece in part 2, ‘The Wisdom of Crowds(ourcing)’, in Writing History in the Digital Age, Kristen Nawrotzki; Jack Dougherty eds. 2013. DigitalCultureBooks, Ann Arbor. http://quod.lib.umich.edu/d/dh/12230987.0001.001/1:5/--writing-history-in-the-digital-age?g=dculture;rgn=div1;view=fulltext;xc=1
