--- a/_posts/2018-01-05-Crowds.md
+++ b/_posts/2018-01-05-Crowds.md
@@ -3,15 +3,21 @@ published: false
 ---
 ## One Amongst Many 
 
-**"Crowd":, _n_.3**
+**Community, _n_**
 
-"A large number of persons gathered so closely together as to press upon or impede each other; a throng, a dense multitude."
+"A body of people or things viewed collectively."
 
 **We are a Community**
 
 Studying the concept of communities has long been approached in academic fields as one that is inherently difficult. On the one hand, looking at communities from a purely unbiased scholarly perspective removes the emotional connection individuals have to certain groups - but on the other hand, emotional responses are inherently biased. The truth is, we cannot remove ourselves from the community because we are a part of it, so critically we have to look from an inside out. 
 
 The digital world has further complicated this idea of community - moving it beyond physical spaces into the online world. As a result, people are part of a community based in geographies related to where they live, go to school, and work but they are also able to connect with people across the globe who share similar values and interests. The digital world thus allows for the enhancement of physical communities through online sectors, but also creates the possibility for the creation of new communities that do not have physical ties. 
+
+This creation of online communities has allowed for intellectual spaces to be maintained through common interest in a subject. In the Humanities much academic work is done alone, with long hours spent researching for the production of a single-authored text. By contrast, online scholarship is often defined by collaboration and open-access work. 
+
+**Crowd, _n_.3**
+
+"A large number of persons gathered so closely together as to press upon or impede each other; a throng, a dense multitude."
 
 **The Crowd in Digital Humanities:**
 
