--- a/_posts/2018-01-05-Crowds.md
+++ b/_posts/2018-01-05-Crowds.md
@@ -13,7 +13,7 @@ Studying the concept of communities has long been approached in academic fields 
 
 The digital world has further complicated this idea of community - moving it beyond physical spaces into the online world. As a result, people are part of a community based in geographies related to where they live, go to school, and work but they are also able to connect with people across the globe who share similar values and interests. The digital world thus allows for the enhancement of physical communities through online sectors, but also creates the possibility for the creation of new communities that do not have physical ties. 
 
-This creation of online communities has allowed for intellectual spaces to be maintained through common interest in a subject. In the Humanities much academic work is done alone, with long hours spent researching for the production of a single-authored text. By contrast, online scholarship is often defined by collaboration and open-access work. 
+This creation of online communities has allowed for intellectual spaces to be maintained through common interest in a subject. In the Humanities much academic work is done alone, with long hours spent researching for the production of a single-authored text. By contrast, online scholarship is often defined by collaboration and open-access work. Yet, there is a certain level of prestige that controls academia and certain forms of knowledge and knowledge making are valued above other, maintaining the hierarcies embedded in scholarship. 
 
 **Crowd, _n_.3**
 
