--- a/_posts/2018-01-05-Crowds.md
+++ b/_posts/2018-01-05-Crowds.md
@@ -22,6 +22,8 @@ This creation of online communities has allowed for intellectual spaces to be ma
 **The Crowd in Digital Humanities:**
 
 The concept of the crowd too moves into the digital world, creating an online gathering of people on certain websites and interfaces. Labour is moving online and many people are working jobs with long hours and little financial benefit making workers invisible and often easily exploited. Yet, digital crowdsourced labour like any kind of labour, is not only done for economic means but is also done purely for the enjoyment. Some types of digital work can be agreed to be given away for free and yet too much is taken for free because of unethical practices that exploit online labourers. Tebor Scholz points out that a direct line can be drawn between "traditional sweatshop economies" and those embedded on the internet. The online labour industry is thus an extension of the physical labour industry, showing that while the space being used is not the same but the practices are. There is a culture in which workers are paid inadequately, paid in a wage that is non-monetary, or not paid at all. 
+
+As with other sections of the work force, academic work is being done online as well. The issue though is that much intellectual work is being removed from the public eye in favour of journals that people must pay to access. This is limiting scholarly engagement with the public and imposing further hierarchies. While many believe that digital work may allow for more access to academic discourse there is less work being done in these spaces than many believe. The traditional gatedness of academic communities is embedded in these practices. 
 **Links**
 Draxler, Bridget and Jon Winet. ‘Community’ Digital Pedagogy in the Humanities https://digitalpedagogy.mla.hcommons.org/keywords/community/
 
