--- a/_posts/2018-01-05-Crowds.md
+++ b/_posts/2018-01-05-Crowds.md
@@ -1,5 +1,8 @@
 ---
-published: false
+published: true
+layout: post
+author: Kirsten Bussière
+title: Crowds - A Reflection
 ---
 ## One Amongst Many 
 
@@ -24,13 +27,14 @@ This creation of online communities has allowed for intellectual spaces to be ma
 The concept of the crowd too moves into the digital world, creating an online gathering of people on certain websites and interfaces. Labour is moving online and many people are working jobs with long hours and little financial benefit making workers invisible and often easily exploited. Yet, digital crowdsourced labour like any kind of labour, is not only done for economic means but is also done purely for the enjoyment. Some types of digital work can be agreed to be given away for free and yet too much is taken for free because of unethical practices that exploit online labourers. Tebor Scholz points out that a direct line can be drawn between "traditional sweatshop economies" and those embedded on the internet. The online labour industry is thus an extension of the physical labour industry, showing that while the space being used is not the same but the practices are. There is a culture in which workers are paid inadequately, paid in a wage that is non-monetary, or not paid at all. 
 
 As with other sections of the work force, academic work is being done online as well. The issue though is that much intellectual work is being removed from the public eye in favour of journals that people must pay to access. This is limiting scholarly engagement with the public and imposing further hierarchies. While many believe that digital work may allow for more access to academic discourse there is less work being done in these spaces than many believe. The traditional gatedness of academic communities is embedded in these practices. 
+
 **Links**
-Draxler, Bridget and Jon Winet. ‘Community’ Digital Pedagogy in the Humanities https://digitalpedagogy.mla.hcommons.org/keywords/community/
 
-Roy Rosenzweig, “Can History be Open Source? Wikipedia and the Future of the Past”, http://chnm.gmu.edu/essays-on-history-new-media/essays/?essayid=42
+- [Draxler, Bridget and Jon Winet. ‘Community’ Digital Pedagogy in the Humanities](https://digitalpedagogy.mla.hcommons.org/keywords/community/)
+- [Roy Rosenzweig, “Can History be Open Source? Wikipedia and the Future of the Past”](http://chnm.gmu.edu/essays-on-history-new-media/essays/?essayid=42) 
+- [Tebor Scholz, ‘Crowdmilking’ 2014](https://web.archive.org/web/20141028184927/http://collectivate.net/journalisms/2014/3/9/crowdmilking.html ) 
+- [Tim Causer and Valerie Wallace. 2012. “Building a volunteer community: results and findings from Transcribe Bentham,” DHQ 6.2 .]( http://discovery.ucl.ac.uk/1362050)
+- [Avi Santo and Christopher Lucas, 2009. ‘Engaging Academic and Nonacademic Communities through Online Scholarly Work.”](http://www.jstor.org.proxy.library.carleton.ca/stable/20484454)
+- [Any piece in part 2, ‘The Wisdom of Crowds(ourcing)’, in Writing History in the Digital Age, Kristen Nawrotzki; Jack Dougherty eds. 2013. DigitalCultureBooks, Ann Arbor.](http://quod.lib.umich.edu/d/dh/12230987.0001.001/1:5/--writing-history-in-the-digital-age?g=dculture;rgn=div1;view=fulltext;xc=1)
 
-Tebor Scholz, ‘Crowdmilking’ 2014 https://web.archive.org/web/20141028184927/http://collectivate.net/journalisms/2014/3/9/crowdmilking.html Tim Causer and Valerie Wallace. 2012. “Building a volunteer community: results and findings from Transcribe Bentham,” DHQ 6.2 . http://discovery.ucl.ac.uk/1362050
-
-Avi Santo and Christopher Lucas, 2009. ‘Engaging Academic and Nonacademic Communities through Online Scholarly Work.” http://www.jstor.org.proxy.library.carleton.ca/stable/20484454
-
-Any piece in part 2, ‘The Wisdom of Crowds(ourcing)’, in Writing History in the Digital Age, Kristen Nawrotzki; Jack Dougherty eds. 2013. DigitalCultureBooks, Ann Arbor. http://quod.lib.umich.edu/d/dh/12230987.0001.001/1:5/--writing-history-in-the-digital-age?g=dculture;rgn=div1;view=fulltext;xc=1
+See my annotations [here](https://hypothes.is/groups/9ZoPkNzN/dhcu?q=user%3Akirstenbussiere).
