--- a/_posts/2018-03-08-sound.md
+++ b/_posts/2018-03-08-sound.md
@@ -3,6 +3,14 @@ published: false
 ---
 ## Can you Hear me Now?
 
-Text Mining:
+**Sound,_n_**
+"The sensation produced in the organs of hearing when the surrounding air is set in vibration in such a way as to affect these; also, that which is or may be heard; the external object of audition, or the property of bodies by which this is produced. Hence also, pressure waves that differ from audible sound only in being of a lower or a higher frequency."
+
+**Sound in Digital Humanities**
+
+
+**Text Mining:**
 
 Text mining as a practise of the digital humanities has long been focused on the analysis of written discourse. Words are elevated on the data hierarchy as having a special sort of value that other information does not carry. Each word has a specific meaning, both on its own and in context. So text mining allows for this to meaning to be collected from large bodies of text, or corpora. 
+
+
